deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-tech-news
  namespace: default
  labels:
    app: ai-tech-news
    io.portainer.kubernetes.application.kind: git
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stackid: "45"
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ai-tech-news
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: ai-tech-news
    spec:
      containers:
        - name: ai-tech-news
          image: 856394422078.dkr.ecr.ap-south-1.amazonaws.com/ai-tech-news:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 2Gi
      imagePullSecrets:
        - name: ecr-secret
      nodeSelector:
        type: worker
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ai-tech-news
  namespace: default
  labels:
    app: ai-tech-news
    io.portainer.kubernetes.application.kind: git
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stackid: "45"
spec:
  type: NodePort
  selector:
    app: ai-tech-news
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30035  # you can change this if needed
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-tech-news-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ai-tech-news.machinehack.com
      secretName: ai-tech-news-tls
  rules:
    - host: ai-tech-news.machinehack.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-tech-news
                port:
                  number: 3000
